--- a/assets/css/control.css
+++ b/assets/css/control.css
@@ -67,3 +67,26 @@ h1 {
   color: white;
   transition: background-color 0.5s ease; 
 }
+
+@media screen and (max-width: 768px) {
+  .control-container {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .video-container {
+    width: 90%;
+  }
+  #joystick-zone {
+    width: 100%;
+    height: 300px;
+  }
+
+  .back-dashboard-link {
+    position: static;
+    display: inline-block;
+    margin-bottom: 20px;
+  }
+  
+}
